BradkenProduction/force-app/main/default/objects/User_Story_Checklist__c/User_Story_Checklist__c.object-meta.xml
<CustomObject>
    <label>User Story Checklist</label>
    <nameField>
        <label>Checklist Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>User Story Checklist</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>