BradkenProduction/force-app/main/default/objects/User_Story_Checklist__c/fields/Configuration_Area__c.field-meta.xml
<CustomField>
    <fullName>Configuration_Area__c</fullName>
    <label>Configuration Area</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>